feat(api): add optional api key auth
